# yarvis

./: .gitignore  CMakeLists.txt  README.md  requirements.txt  setup.txt
python/: activity.py  common.py  debug_activity.py  event_manager.py  hand_detector.py  hand_landmarker.py  hand_module.py  kinect_manager.py  main.py
src/: kinect.cpp  kinect_bridge.cpp  main.cpp
